syntax = "proto3";

package rsdb.rpc;

service CoordinatorControl {
  rpc RegisterWorker(RegisterWorkerRequest) returns (RegisterWorkerResponse);
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  rpc ListWorkers(ListWorkersRequest) returns (ListWorkersResponse);
  rpc GetRegisteredTables(GetRegisteredTablesRequest) returns (GetRegisteredTablesResponse);
}

service WorkerTask {
  // Execute a plan fragment and return a stream of Arrow batches.
  // Can be used for root tasks (returning data) or intermediate tasks (registering for W2W).
  rpc ExecutePlanFragmentStream (ExecutePlanFragmentRequest) returns (stream ArrowBatch);

  // Register a CSV file as a table on the worker.
  rpc RegisterCsv (RegisterCsvRequest) returns (RegisterCsvResponse);
  
  // Register a Parquet file as a table on the worker.
  rpc RegisterParquet (RegisterParquetRequest) returns (RegisterParquetResponse);

  // Register an in-memory table from Arrow IPC.
  rpc RegisterMemTable (RegisterMemTableRequest) returns (RegisterMemTableResponse);

  // Execute a raw SQL query (mostly for DDL/Utility).
  rpc ExecuteSql (ExecuteSqlRequest) returns (ExecuteSqlResponse);

  // List tables currently registered on the worker.
  rpc ListTables (ListTablesRequest) returns (ListTablesResponse);
}

message RegisterWorkerRequest {
  uint32 node_id = 1;
  string addr = 2;
}

message RegisterWorkerResponse {}

message HeartbeatRequest {
  uint32 node_id = 1;
}

message HeartbeatResponse {}

message ListWorkersRequest {}

message Worker {
  uint32 node_id = 1;
  string addr = 2;
  int64 registered_at_unix_ms = 3;
  int64 last_heartbeat_unix_ms = 4;
  string status = 5;
}

message ListWorkersResponse {
  repeated Worker workers = 1;
}

message ExecuteSqlRequest {
  string sql = 1;
}

// Arrow IPC stream bytes (StreamWriter format)
message ExecuteSqlResponse {
  bytes arrow_ipc = 1;
}

message ExecutePlanFragmentRequest {
  // Substrait plan bytes (prost-encoded Plan)
  bytes plan_bytes = 1;
  // Unique task identifier for W2W shuffle result registration
  string task_id = 2;
  // Whether to return the result stream in the RPC response.
  bool return_data = 3;
  // Physical data sources for remote exchanges within this fragment.
  repeated RemoteSource sources = 4;
}

message RemoteSource {
  string worker_addr = 1;
  string task_id = 2;
  // Serialized Arrow Schema for this data source
  bytes schema_ipc = 3;
}

message ArrowBatch {
  bytes arrow_ipc = 1;  // Single RecordBatch as Arrow IPC
  bytes schema_ipc = 2; // Schema (optional metadata)
}

message RegisterMemTableRequest {
  string table_name = 1;
  // Arrow IPC stream bytes (StreamWriter format)
  bytes arrow_ipc = 2;
}

message RegisterMemTableResponse {}

message RegisterCsvRequest {
  string table_name = 1;
  string path = 2;
  bool has_header = 3;
  uint32 delimiter = 4;
}

message RegisterCsvResponse {}

message RegisterParquetRequest {
  string table_name = 1;
  string path = 2;
}

message RegisterParquetResponse {}

message ListTablesRequest {}

message ListTablesResponse {
  repeated string table_names = 1;
}

message GetRegisteredTablesRequest {}

message RegisteredTable {
  string table_name = 1;
  string kind = 2;
  string path = 3;
  bool has_header = 4;
  uint32 delimiter = 5;
}

message GetRegisteredTablesResponse {
  repeated RegisteredTable tables = 1;
}
